FIxed alignment issues

--- a/frontend/public/styles.css
+++ b/frontend/public/styles.css
@@ -54,8 +54,9 @@ footer {
 /*header*/
 .navbar {
   grid-area: header;
-  justify-content: space-between;
+  display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
   background-color: white;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
   width: 100%;
@@ -90,12 +91,12 @@ footer {
   -webkit-box-sizing: content-box;
   box-sizing: content-box;
   padding: 0.5rem 0.65rem 0.625rem;
-  margin: 0;
   outline: 0;
   border: 1px solid #f5f5f6;
   border-radius: 0 0.25rem 0.25rem 0;
   border-left: 0;
   background: #f5f5f6;
+  margin-left: 2rem;
   text-align: start;
 }
 
@@ -112,7 +113,6 @@ a.desktop-submit {
   border-right: none;
   border-radius: 0.25rem 0 0 0.25rem;
   position: absolute;
-  left: -2.5rem;
 }
 
 .navbar .box3{
@@ -229,11 +229,10 @@ a.desktop-submit {
 /*cart screen*/
 .cartScreen{
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   flex-wrap: wrap;
   align-items: flex-start;
   background-color: white;
-  margin-top: 4rem;
 }
 
 .container1{
@@ -317,16 +316,30 @@ a.desktop-submit {
 
 /*Checkout*/
 
-@media(max-width:500px){
+@media(max-width:468px){
   .checkoutSteps{
     margin-top: 2rem;
   }
+  .homescreen{
+    margin-top: 2rem;
+  }
 }
+
+@media(min-width:1026px){
+  .cartScreen{
+    margin-top: 2rem;
+    justify-content: center;
+  }
+  .placeOrder{
+    justify-content: center;
+  }
+}
+
 .checkoutSteps > div{
-  flex: 1;
-  padding: 1rem;
   border-top: 2px #545b6238 solid;
   color: #545b6238;
+  flex: 1;
+  padding-top: 0.5rem;
 }
 
 .checkoutSteps > div.active {
@@ -339,8 +352,9 @@ a.desktop-submit {
 .placeOrder{
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-between;
   align-items: flex-start;
+  margin-top: 2rem;
 }
 
 .orderDetails{
